--- a/photogram/Base.lproj/Main.storyboard
+++ b/photogram/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -188,21 +189,62 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="LXv-bP-MBa">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="263" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="LXv-bP-MBa">
                                 <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="itemCell" rowHeight="280" id="mY6-GX-RIb" customClass="ItemTableViewCell" customModule="photogram" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="280"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="mY6-GX-RIb" id="jHK-G2-eW1">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="279.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Poster's name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RAF-gb-5Qh">
+                                                    <rect key="frame" x="19" y="15" width="337" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="337" id="jDg-bL-ttJ"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="emoji.png" translatesAutoresizingMaskIntoConstraints="NO" id="FCk-6i-laj">
+                                                    <rect key="frame" x="22" y="44" width="331" height="151"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="151" id="A8E-8j-7nj"/>
+                                                        <constraint firstAttribute="width" constant="331" id="uU5-cy-a7k"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Caption here" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="PA7-9N-Rxf">
+                                                    <rect key="frame" x="19" y="212" width="337" height="20.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="337" id="4by-Pj-EKW"/>
+                                                    </constraints>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailingMargin" secondItem="RAF-gb-5Qh" secondAttribute="trailing" constant="11" id="5ll-Bu-46J"/>
+                                                <constraint firstItem="FCk-6i-laj" firstAttribute="top" secondItem="RAF-gb-5Qh" secondAttribute="bottom" constant="8" id="6EJ-kF-CAb"/>
+                                                <constraint firstItem="RAF-gb-5Qh" firstAttribute="centerX" secondItem="jHK-G2-eW1" secondAttribute="centerX" id="LqY-DE-rc7"/>
+                                                <constraint firstItem="PA7-9N-Rxf" firstAttribute="centerX" secondItem="jHK-G2-eW1" secondAttribute="centerX" id="b5f-Bd-vR0"/>
+                                                <constraint firstItem="RAF-gb-5Qh" firstAttribute="top" secondItem="jHK-G2-eW1" secondAttribute="topMargin" constant="7" id="dk6-kN-fFY"/>
+                                                <constraint firstItem="PA7-9N-Rxf" firstAttribute="top" secondItem="FCk-6i-laj" secondAttribute="bottom" constant="17" id="sAO-Bg-HUK"/>
+                                                <constraint firstItem="FCk-6i-laj" firstAttribute="centerX" secondItem="jHK-G2-eW1" secondAttribute="centerX" id="w5S-xs-Jcs"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
                                 <connections>
                                     <outlet property="dataSource" destination="OdC-da-lNr" id="ipe-3E-RTA"/>
                                     <outlet property="delegate" destination="OdC-da-lNr" id="1bS-I9-kVh"/>
                                 </connections>
                             </tableView>
                         </subviews>
-                        <constraints>
-                            <constraint firstItem="LXv-bP-MBa" firstAttribute="leading" secondItem="p5o-SZ-fFM" secondAttribute="leading" id="4PK-fp-0Cs"/>
-                            <constraint firstItem="948-dx-wNl" firstAttribute="top" secondItem="LXv-bP-MBa" secondAttribute="bottom" id="MU0-tJ-gcK"/>
-                            <constraint firstAttribute="trailing" secondItem="LXv-bP-MBa" secondAttribute="trailing" id="VBy-E3-Dte"/>
-                            <constraint firstItem="LXv-bP-MBa" firstAttribute="top" secondItem="dbv-1p-HmG" secondAttribute="bottom" id="yKz-0B-N02"/>
-                        </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Feed" id="0v1-GH-VE9"/>
                 </viewController>
@@ -255,5 +297,8 @@
             <point key="canvasLocation" x="653.60000000000002" y="138.98050974512745"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="emoji.png" width="480" height="480"/>
+    </resources>
     <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
 </document>
